[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-ta"
version = "5.0"
dependencies = [
    "numba>=0.64.0",
    "numpy>=2.2.1,<3",
    "pandas>=2.2.3,<4",
    "tqdm>=4.67.3"
]
requires-python = ">= 3.11"

description = "Technical Analysis Indicators - Pandas TA is an easy to use Python 3 Pandas Extension with 150+ Indicators"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]


[project.urls]
Homepage = "https://github.com/gopalparashar421/pandas_ta"
Repository = "https://github.com/gopalparashar421/pandas_ta"
Issues = "https://github.com/gopalparashar421/pandas_ta/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pandas_ta*"]

[tool.setuptools.package-data]
pandas_ta = ["py.typed"]
